--- a/Project.toml
+++ b/Project.toml
@@ -30,7 +30,7 @@ HTTP = "1"
 JSON3 = "1"
 MbedTLS = "0.6, 0.7, 1"
 Minio = "0.1, 0.2"
-Mocking = "0.7"
+Mocking = "0.7, 0.8"
 OrderedCollections = "1"
 Retry = "0.3, 0.4"
 SymDict = "0.3"
