--- a/.github/workflows/blue_style_formatter.yml
+++ b/.github/workflows/blue_style_formatter.yml
@@ -30,6 +30,6 @@ jobs:
           format("."; verbose=true) || exit(1)
       # Add formatting suggestions to non-draft PRs even if when "Check formatting" fails
       - uses: reviewdog/action-suggester@v1
+        if: ${{ !cancelled() && github.event_name == 'pull_request' }}
         with:
           tool_name: JuliaFormatter
-          fail_on_error: true
