--- a/.github/workflows/blue_style_formatter.yml
+++ b/.github/workflows/blue_style_formatter.yml
@@ -33,3 +33,7 @@ jobs:
         if: ${{ !cancelled() && github.event_name == 'pull_request' }}
         with:
           tool_name: JuliaFormatter
+          # Post results on all results and not just changed files:
+          # https://github.com/reviewdog/reviewdog#filter-mode
+          filter_mode: nofilter
+
