--- a/.github/workflows/CompatHelper.yaml
+++ b/.github/workflows/CompatHelper.yaml
@@ -2,7 +2,7 @@ name: CompatHelper
 on:
   pull_request:
     paths:
-      - ".github/workflows/CompatHelper.yml"
+      - ".github/workflows/CompatHelper.yaml"
   schedule:
     - cron: "0 0 * * *"
   workflow_dispatch:
