--- a/.github/workflows/Documenter.yaml
+++ b/.github/workflows/Documenter.yaml
@@ -6,7 +6,7 @@ on:
       - "docs/**"
       - "src/**"
       - "Project.toml"
-      - ".github/workflows/Documenter.yml"
+      - ".github/workflows/Documenter.yaml"
   push:
     tags: ["*"]
     branches:
@@ -15,7 +15,7 @@ on:
       - "docs/**"
       - "src/**"
       - "Project.toml"
-      - ".github/workflows/Documenter.yml"
+      - ".github/workflows/Documenter.yaml"
   workflow_dispatch:
 jobs:
   docs:
