--- a/.github/workflows/JuliaFormatter.yaml
+++ b/.github/workflows/JuliaFormatter.yaml
@@ -1,4 +1,4 @@
-name: Format suggestions
+name: JuliaFormatter
 on:
   merge_group:
   pull_request:
@@ -11,6 +11,7 @@ permissions:
   pull-requests: write
 jobs:
   format:
+    name: Format
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
