--- a/Project.toml
+++ b/Project.toml
@@ -23,7 +23,9 @@ XMLDict = "228000da-037f-5747-90a9-8195ccbf91a5"
 [compat]
 AWS = "1.63.1"
 ArrowTypes = "1.2, 2"
+Base64 = "1"
 Compat = "3.29, 4"
+Dates = "1"
 EzXML = "0.9, 1"
 FilePathsBase = "0.9.11"
 HTTP = "1"
@@ -35,6 +37,7 @@ OrderedCollections = "1"
 Retry = "0.3, 0.4"
 SymDict = "0.3"
 URIs = "1.3"
+UUIDs = "1"
 XMLDict = "0.3, 0.4"
 julia = "1.6"
 
